added ability to run across two different browsers