@@ -8,13 +8,21 @@
     <artifactId>com.mycompany.openforbeta</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <selenium.test.webbrowser>firefox</selenium.test.webbrowser>
+        <selenium.test.jvmargs><![CDATA[-Dwebbrowser=${selenium.test.webbrowser}]]></selenium.test.jvmargs>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.5</version>
                 <configuration>
+                    <argLine> -Xmx128m -Xms128m -XX:MaxPermSize=196m ${selenium.test.jvmargs}</argLine>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                     <properties>
                         <property>
                             <name>usedefaultlisteners</name>
@@ -25,9 +33,9 @@
                             <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
                         </property>
                     </properties>
+                    <reportsDirectory>${project.basedir}/target/</reportsDirectory>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
@@ -35,11 +43,6 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>2.44.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server</artifactId>
             <version>2.43.0</version>
         </dependency>
         <dependency>
